# steam-desktop-authenticator-rs

./: .gitignore  README.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml
src/: app.tsx  index.css  layout.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/protobufs/: enums.proto  steammessages_base.proto  steammessages_player.steamclient.proto  steammessages_unified_base.steamclient.proto
src-tauri/src/: account_manager.rs  app_state.rs  approval.rs  auth.rs  lib.rs  main.rs
src-tauri/src/account/: commands.rs  payloads.rs
src-tauri/src/account_manager/: accounts_config.rs  accounts_response.rs  commands.rs  mod.rs
src-tauri/src/auth/: accounts_store.rs  commands.rs  mod.rs  payloads.rs  user_credentials.rs
src-tauri/src/authentication_approvals/: commands.rs  format_user_agent.rs  mod.rs  payloads.rs
src-tauri/src/common/: validators.rs
src-tauri/src/confirmations/: commands.rs  payloads.rs
src-tauri/src/steamapi/: macros.rs
src/UI/Auth/: auth-option.tsx
src/api/: account.ts  auth.ts  authentication-approvals.ts  confirmations.ts  hooks.ts  totp.ts
src/components/: account-selector.tsx  breadcrumb.tsx  lookup-input.tsx  navigation-menu.tsx  sign-in-request-card.tsx  sign-in-request-container.tsx  sign-in-request-list.tsx  titlebar.tsx  totp-display.tsx
src/hooks/: use-accounts.ts  use-notify.ts  use-theme.tsx
src/pages/: welcome.tsx
src/providers/: accounts-provider.tsx
src/utilities/: notify.ts
(+40 files in other folders)
