[package]
name = "steam-desktop-authenticator-rs"
version = "0.1.0"
description = "A Tauri App"
authors = ["prenaissance"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "steam_desktop_authenticator_rs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
protobuf = "3.7.2"
protobuf-codegen = "3.7.2"
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
validator = { version = "0.20.0", features = ["derive"] }
base64 = "0.22.1"
anyhow = "1.0"
tokio = { version = "1.48.0", features = ["fs"] }
steamguard = "0.17.1"
reqwest = { version = "0.12.24", features = ["json"] }
gethostname = "1.1.0"
protobuf = "3.7.2"
tauri-plugin-notification = "2.3.3"
chrono = { version = "0.4.42", features = ["serde"] }
log = { version = "0.4.28", features = ["std", "serde"] }
tauri-plugin-log = "2"
serde_with = "3.15.1"
